--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         <!-- Video link -->
         <span class="link-block">
-          <a href="https://youtu.be/VMjZGyuvc7k?autoplay=1" target="_blank"
+          <a href="https://youtu.be/VMjZGyuvc7k" target="_blank"
           class="external-link button is-normal is-rounded is-dark">
             <span class="icon">
               <i class="fab fa-youtube"></i>
@@ -415,7 +415,7 @@
         <div class="column is-four-fifths">
 
           <div class="publication-video">
-            <iframe width="1258" height="594" src="https://youtu.be/VMjZGyuvc7k?autoplay=1" title="Human-Robot Experiments: Synergistic Human-Aware Task Planner Outperforms" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="1258" height="594" src="https://www.youtube.com/embed/Btap6afoUF4?autoplay=1" title="Human-Robot Experiments: Synergistic Human-Aware Task Planner Outperforms" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
         </div>
       </div>
