--- a/index.html
+++ b/index.html
@@ -530,7 +530,19 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>The paper is submitted and now under review to RCIM Journal.</code></pre>
+      <pre><code>
+@article{synergystic_hrtp_sandrini,
+  title = {Learning and planning for optimal synergistic human–robot coordination in manufacturing contexts},
+  journal = {Robotics and Computer-Integrated Manufacturing},
+  volume = {95},
+  pages = {103006},
+  year = {2025},
+  issn = {0736-5845},
+  doi = {https://doi.org/10.1016/j.rcim.2025.103006},
+  url = {https://www.sciencedirect.com/science/article/pii/S0736584525000602},
+  author = {Samuele Sandrini and Marco Faroni and Nicola Pedrocchi},
+  }
+      </code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
